--- a/mednik/Views/Login/Index.cshtml
+++ b/mednik/Views/Login/Index.cshtml
@@ -8,7 +8,7 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="~/login.css">
     <title>Login</title>
 </head>
 <body>
