--- a/mednik/Views/Posts/Index.cshtml
+++ b/mednik/Views/Posts/Index.cshtml
@@ -6,7 +6,7 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="login.css"/>
+    <link rel="stylesheet" href="~/login.css"/>
     <title>Add Post</title>
 </head>
 <body>
