--- a/mednik/Views/Services/Index.cshtml
+++ b/mednik/Views/Services/Index.cshtml
@@ -6,7 +6,7 @@
 
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="login.css"/>
+    <link rel="stylesheet" href="~/login.css"/>
     <title>Services</title>
 </head>
 <body>
